--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build --if-present
+        run: ng build
 
       - name: Test Angular app
-        run: npm run test --if-present
+        run: ng test
